--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </main>
     <footer class="primary-footer">
       <p class="created-by">Creating with enthusiams by caring residents.</p>
-      <a href="https://www.facebook.com/profile.php?id=100011159072586"> 
+      <a href="https://github.com/mickle228"> 
       facebook
       </a>
     </footer>
