--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <footer class="primary-footer">
       <p class="created-by">Creating with enthusiams by caring residents.</p>
       <a href="https://github.com/mickle228"> 
-      facebook
+        <p>facebook</p>
       </a>
     </footer>
   </body>
