--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="store-details">
           <h2 class="category-heading">Food</h2>
           <ul class="store-list">
-            <li class="store-name"><a class="store-link" href="#">Just Cookies</a></li>
+            <li class="store-name">
+              <a href="index.html" class="active"> Just cookies </a>
             <li class="store-name"><a class="store-link" href="#">Cake Too...</a></li>
           </ul>
         </div>
