--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h2 class="category-heading">Food</h2>
           <ul class="store-list">
             <li class="store-name">
-              <a href="index.html" class="active"> Just cookies </a>
+              <a href="food.html" class="#"> Just cookies </a>
             <li class="store-name"><a class="store-link" href="#">Cake Too...</a></li>
           </ul>
         </div>
