--- a/food.html
+++ b/food.html
@@ -7,6 +7,7 @@
   <body>
     <header class="primary-header">
       <h1 class="main-heading">Food in Ampli Town</h1>
+
     </header>
     <main>
       <section class="store-section">
@@ -14,7 +15,7 @@
         <div class="store-details">
           <h2 class="category-heading">Food</h2>
           <ul class="store-list">
-            <li class="store-name"><a class="store-link" href="#">Just Cookies</a></li>
+            <li class="store-name"><a class="store-link" href="index.html">Just Cookies</a></li>
             <li class="store-name"><a class="store-link" href="#">Cake Too...</a></li>
           </ul>
         </div>
@@ -34,7 +35,7 @@
           <div class="store-details" >
             <h2 class="category-heading">Shop</h2>
             <ul class="store-list">
-              <li class="store-name"><a class="store-link" href="#">Puppy Parade</a></li>
+              <li class="store-name"><a class="store-link" href="shop.html">Puppy Parade</a></li>
               <li class="store-name"><a class="store-link" href="#">Cool Kittens</a></li>
             </ul>
           </div>
@@ -43,7 +44,7 @@
     <footer class="primary-footer">
       <p class="created-by">Creating with enthusiams by caring residents.</p>
       <a href="https://github.com/mickle228"> 
-        <p>facebook</p>
+        <p>github</p>
       </a>
     </footer>
   </body>
