--- a/shop.html
+++ b/shop.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="primary-header">
-      <h1 class="main-heading">Welcome To Ampli Town</h1>
-      <img class="town-preview" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983906/townheader.svg" />
+      <h1 class="main-heading">Shop in Ampli Town</h1>
+
     </header>
     <main>
       <section class="store-section">
@@ -15,7 +15,7 @@
         <div class="store-details">
           <h2 class="category-heading">Food</h2>
           <ul class="store-list">
-            <li class="store-name"><a class="store-link" href="./food.html"><p>Just Cookies</p></a></li>
+            <li class="store-name"><a class="store-link" href="food.html">Just Cookies</a></li>
             <li class="store-name"><a class="store-link" href="#">Cake Too...</a></li>
           </ul>
         </div>
@@ -35,7 +35,7 @@
           <div class="store-details" >
             <h2 class="category-heading">Shop</h2>
             <ul class="store-list">
-              <li class="store-name"><a class="store-link" href="shop.html">Puppy Parade</a></li>
+              <li class="store-name"><a class="store-link" href="index.html">Puppy Parade</a></li>
               <li class="store-name"><a class="store-link" href="#">Cool Kittens</a></li>
             </ul>
           </div>
