--- a/index.html
+++ b/index.html
@@ -1,51 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="./css/styles.css"/>
-    <title>Ampli Town</title>
-  </head>
-  <body>
-    <header class="primary-header">
-      <h1 class="main-heading">Welcome To Ampli Town</h1>
-      <img class="town-preview" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983906/townheader.svg" />
-    </header>
-    <main>
-      <section class="store-section">
-        <img class="building" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983905/townfood.svg" />
-        <div class="store-details">
-          <h2 class="category-heading">Food</h2>
-          <ul class="store-list">
-            <li class="store-name"><a class="store-link" href="./food.html"><p>Just Cookies</p></a></li>
-            <li class="store-name"><a class="store-link" href="#">Cake Too...</a></li>
-          </ul>
-        </div>
-      </section>
-      <section class="store-section">
-        <img class="building" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983905/townsleep.svg" />
-        <div class="store-details">
-          <h2 class="category-heading">Sleep</h2>
-          <ul class="store-list">
-            <li class="store-name"><a class="store-link" href="#">The Snooze Inn</a></li>
-            <li class="store-name"><a class="store-link" href="#">Zzz Hotel</a></li>
-          </ul>
-        </div>
-      </section>
-      <section class="store-section">
-          <img class="building" src="https://res.cloudinary.com/dnna0ynnm/image/upload/v1537983905/townshop.svg" />
-          <div class="store-details" >
-            <h2 class="category-heading">Shop</h2>
-            <ul class="store-list">
-              <li class="store-name"><a class="store-link" href="shop.html">Puppy Parade</a></li>
-              <li class="store-name"><a class="store-link" href="#">Cool Kittens</a></li>
+    <head>
+        <title>Oleh's website</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=McLaren&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="nav">
+            <ul class="menu">
+                <li class="name">Oleh</li>
+                <li><a class="lii" href="index1.html">Home</a></li>
+                <li><a class="lii" href="index2.html">Experience</a></li>
             </ul>
-          </div>
-      </section>
-    </main>
-    <footer class="primary-footer">
-      <p class="created-by">Creating with enthusiams by caring residents.</p>
-      <a href="https://github.com/mickle228"> 
-        <p>github</p>
-      </a>
-    </footer>
-  </body>
+        </div>
+        <header>
+            <img src="https://cdn.shopify.com/s/files/1/1733/0935/products/Brooke_s_Octopuse_84a9c768-546c-4791-87f0-ea53ed95d7e0_530x@2x.JPG?v=1497721335" alt="">
+            <h1 class="tag">Hello, i am Oleh</h1>
+            <p class="tag sub-title">My home is ...</p>
+        </header>
+        <div class="content">
+            <div class="card">
+               <h2>Background</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, ipsum? Iure pariatur perspiciatis, voluptas ipsa corporis laudantium eius deserunt labore vitae eum temporibus sequi officia suscipit rerum aliquid a vel?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus dolorem totam, mollitia nam vitae earum odit aperiam soluta eius amet.</p>
+            </div>
+
+            <div class="card">
+                <h2>Goals</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, provident saepe.</p>
+                <ul class="tag-list">
+                    <li class="tag tag-blue">HTML</li>
+                    <li class="tag tag-yellow">CSS</li>
+                    <li class="tag tag-blue">JS</li>
+                    <li class="tag tag-yellow">Web Design</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, deserunt delectus!</p>
+            </div>
+        </div>
+        <footer>
+            <ol>
+                <li><a href="https://t.me/mickle04"> <img class="tab" src="./output-onlinejpgtools.png.png" alt=""></a></li>
+                <li><a href="https://github.com/mickle228"> <img class="tab1" src="./output-onlinejpgtools%20(4).png" alt=""></a></li>
+                <li><a href="https://www.instagram.com/oleh.kachanovsky/?hl=uk"> <img class="tab2" src="./output-onlinejpgtools%20(3).png" alt=""></a></li>
+            </ol>
+            <p>Lorem, ipsum.</p>
+        </footer>
+    </body>
 </html>
